--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.1",
+        "openai": "5.12.0",
         "zod": "^3.23.8"
     }
 }
