--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.1",
         "dotenv": "17.2.1",
+        "npm-check-updates": "18.0.2",
         "openai": "5.12.0",
         "zod": "^3.23.8"
     }
