--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "dotenv": "17.2.1",
         "npm-check-updates": "18.0.2",
         "openai": "5.12.2",
+        "registry-url": "7.2.0",
         "semver": "7.7.2",
         "zod": "^3.23.8"
     }
