--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build"
     ],
     "scripts": {
-        "build": "tsc && node -e \"require('fs').copyFileSync('./.env', './build/.env')\" && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+        "build": "node -e \"require('fs').rmSync('./build', {recursive: true, force: true})\" && tsc && node -e \"require('fs').copyFileSync('./.env', './build/.env')\" && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Arijit Kundu",
