--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.2",
+        "@types/better-sqlite3": "7.6.13",
         "@types/semver": "7.7.0",
+        "better-sqlite3": "12.2.0",
         "dotenv": "17.2.1",
         "npm-check-updates": "18.0.2",
         "openai": "5.12.2",
