--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     ],
     "scripts": {
         "build": "node -e \"require('fs').rmSync('./build', {recursive: true, force: true})\" && tsc && node -e \"require('fs').copyFileSync('./.env', './build/.env')\" && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
-        "test": "mocha test/*"
+        "test": "mocha --require ts-node/register --require source-map-support/register \"test/**/*.test.ts\"",
+        "test:unit": "mocha --require ts-node/register --require source-map-support/register \"test/**/*.test.ts\""
     },
     "author": "Arijit Kundu",
     "license": "ISC",
@@ -22,6 +23,8 @@
         "@types/node": "^24.2.1",
         "chai": "5.2.1",
         "mocha": "11.7.1",
+        "source-map-support": "0.5.21",
+        "ts-node": "10.9.2",
         "typescript": "^5.9.2"
     },
     "dependencies": {
@@ -32,5 +35,17 @@
         "openai": "5.12.2",
         "semver": "7.7.2",
         "zod": "^3.23.8"
+    },
+    "mocha": {
+        "extension": ["test.ts"],
+        "require": [
+            "source-map-support/register",
+            "ts-node/register"
+        ]
+    },
+    "ts-node": {
+        "compilerOptions": {
+            "module": "commonjs"
+        }
     }
 }
