--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
             "test.ts"
         ],
         "spec": "test/**/*.test.ts",
-        "timeout": 10000
+        "timeout": 3600000
     }
 }
