--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
     - name: Checkout code
@@ -23,14 +24,39 @@ jobs:
         node-version: '20.x'
         cache: 'npm'
 
-    - name: Install dependencies
-      run: npm ci
+    - name: Verify package files
+      run: |
+        echo "Checking package.json and package-lock.json..."
+        ls -la package*.json
+        node --version
+        npm --version
+
+    - name: Clear npm cache and install dependencies
+      run: |
+        echo "Clearing npm cache..."
+        npm cache clean --force
+        
+        echo "Installing dependencies..."
+        # Try npm ci first, fallback to npm install if it fails
+        if ! npm ci; then
+          echo "npm ci failed, trying npm install..."
+          rm -rf node_modules package-lock.json
+          npm install
+        fi
+
+    - name: Verify installation
+      run: |
+        echo "Verifying node_modules..."
+        ls -la node_modules/ | head -10
+        npm list --depth=0
 
     - name: Build project
       run: npm run build
 
     - name: Run test
-      run: npm test -- --grep "${{ github.event.inputs.test_pattern }}"
+      run: |
+        echo "Running test with pattern: ${{ github.event.inputs.test_pattern }}"
+        npm test -- --grep "${{ github.event.inputs.test_pattern }}"
 
     - name: Display test results
       if: always()
