--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/node": "^24.2.1",
         "chai": "5.2.1",
         "mocha": "11.7.1",
+        "nyc": "17.1.0",
         "source-map-support": "0.5.21",
         "ts-node": "10.9.2",
         "tsx": "4.20.5",
