--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -39,9 +39,12 @@ jobs:
       if: always()
       id: artifact_name
       run: |
-        CLEAN_NAME="${{ github.event.inputs.test_pattern }}"
-        CLEAN_NAME="${CLEAN_NAME// /_}"
-        echo "name=${CLEAN_NAME}__logs-${{ github.run_number }}" >> $GITHUB_OUTPUT
+        node -e "
+        const testPattern = '${{ github.event.inputs.test_pattern }}';
+        const cleanName = testPattern.replace(/\s/g, '_');
+        const artifactName = \`\${cleanName}__logs-${{ github.run_number }}\`;
+        require('fs').appendFileSync(process.env.GITHUB_OUTPUT, \`name=\${artifactName}\n\`);
+        "
 
     - name: Upload logs as artifacts
       if: always()
