--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -40,11 +40,12 @@ jobs:
       id: artifact_name
       run: |
         node -e "
-        const testPattern = '${{ github.event.inputs.test_pattern }}';
-        const cleanName = testPattern.replace(/\s/g, '_');
-        const artifactName = \`\${cleanName}__logs-${{ github.run_number }}\`;
-        require('fs').appendFileSync(process.env.GITHUB_OUTPUT, \`name=\${artifactName}\n\`);
-        "
+        const testPattern = process.argv[1];
+        const runNumber = process.argv[2];
+        const cleanName = testPattern.replace(/\\s/g, '_');
+        const artifactName = cleanName + '__logs-' + runNumber;
+        require('fs').appendFileSync(process.env.GITHUB_OUTPUT, 'name=' + artifactName + '\\n');
+        " '${{ github.event.inputs.test_pattern }}' '${{ github.run_number }}'
 
     - name: Upload logs as artifacts
       if: always()
