fix: ensure newline character is appended to artifact name output

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -42,9 +42,10 @@ jobs:
         node -e "
         const testPattern = process.argv[1];
         const runNumber = process.argv[2];
-        const cleanName = testPattern.replace(/\\s/g, '_');
+        const cleanName = testPattern.replace(/\s/g, '_');
         const artifactName = cleanName + '__logs-' + runNumber;
-        require('fs').appendFileSync(process.env.GITHUB_OUTPUT, 'name=' + artifactName);
+        require('fs').appendFileSync(process.env.GITHUB_OUTPUT, 'name=' + artifactName + '\n');
+        console.log('Generated artifact name:', artifactName);
         " '${{ github.event.inputs.test_pattern }}' '${{ github.run_number }}'
 
     - name: Upload logs as artifacts
