refactor: update import paths for utility modules and enhance tsconfig for path mapping

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,12 @@
         "paths": {
             "@/*": [
                 "src/*"
+            ],
+            "@T/*": [
+                "src/tools/*"
+            ],
+            "@U/*": [
+                "src/utils/*"
             ]
         }
     },
@@ -21,6 +27,7 @@
         "experimentalSpecifierResolution": "node"
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "test/**/*"
     ]
 }
