--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "type": "module",
     "bin": {
-        "ngplusplus": "./dist/index.js"
+        "ngpp": "./dist/index.js"
     },
     "files": [
         "dist"
