--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@modelcontextprotocol/sdk": "^1.17.2",
         "@types/semver": "7.7.0",
         "dotenv": "17.2.1",
+        "handlebars": "4.7.8",
         "npm-check-updates": "18.0.2",
         "openai": "5.12.2",
         "semver": "7.7.2",
