feat: add custom error classes and templates for AI response and package version validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
             "@S/*": [
                 "src/services/*"
             ],
+            "@E/*": [
+                "src/exceptions/*"
+            ],
             "@I/*": [
                 "src/interfaces/*"
             ]
