--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/chai": "5.2.2",
+        "@types/handlebars": "4.0.40",
         "@types/mocha": "10.0.10",
         "@types/node": "^24.2.1",
         "chai": "5.2.1",
