fix: ensure test execution only runs on successful build

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -29,6 +29,7 @@ jobs:
       run: npm run build
 
     - name: Run test
+      if: success()
       run: npx mocha -- --grep "${{ github.event.inputs.test_pattern }}"
 
     - name: Display test results
