--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,12 @@
             "skipFiles": [
                 "<node_internals>/**"
             ]
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Mocha Test",
+            "port": 9229
         }
     ]
 }
