feat: implement SQLite-based caching for package data
- Added a new Cache class utilizing better-sqlite3 for persistent storage.
- Introduced methods for getting, setting, deleting, and cleaning cached package data.
- Integrated caching into the conflict analysis utility for package ranking, improving performance by reducing redundant API calls.
- Updated package.json and package-lock.json to include better-sqlite3 and its types.
- Configured GitHub Actions to retain the package-cache.db file for 30 days.

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -59,4 +59,5 @@ jobs:
           src/logs/
           src/utils/logs/
           test/assets/
+          package-cache.db
         retention-days: 30
