--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "author": "Arijit Kundu",
     "license": "ISC",
     "devDependencies": {
+        "@types/better-sqlite3": "7.6.13",
         "@types/chai": "5.2.2",
         "@types/handlebars": "4.0.40",
         "@types/mocha": "10.0.10",
@@ -36,6 +37,7 @@
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.2",
         "@types/semver": "7.7.0",
+        "better-sqlite3": "12.4.1",
         "dotenv": "17.2.1",
         "handlebars": "4.7.8",
         "npm-check-updates": "18.0.2",
