--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "npm-check-updates": "18.0.2",
         "openai": "5.12.2",
         "semver": "7.7.2",
+        "simple-git": "3.28.0",
         "zod": "^3.23.8"
     }
 }
