feat: update artifact upload path to include all test assets

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -65,6 +65,7 @@ jobs:
           logs/
           src/logs/
           src/utils/logs/
-          test/assets/
+          test/assets/**
+          test/assets/.*
           package-cache.db
         retention-days: 30
