feat: add git-git directory to artifact upload paths in workflow

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -65,6 +65,7 @@ jobs:
           logs/
           src/logs/
           src/utils/logs/
+          test/assets/git-git/
           test/assets/**
           test/assets/.*
           package-cache.db
