--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -13,6 +13,29 @@ on:
         required: false
         default: '200'
         type: string
+      openai_model:
+        description: 'OpenAI model to use'
+        required: false
+        default: 'copilot-gpt-4'
+        type: choice
+        options:
+          - 'copilot-gpt-4.1'
+          - 'copilot-gpt-5-mini'
+          - 'copilot-gpt-5'
+          - 'copilot-gpt-3.5-turbo'
+          - 'copilot-gpt-4o-mini'
+          - 'copilot-gpt-4'
+          - 'copilot-gpt-4-turbo'
+          - 'copilot-gpt-4o'
+          - 'copilot-o3-mini'
+          - 'copilot-grok-code'
+          - 'copilot-gpt-5-codex'
+          - 'copilot-claude-3.5-sonnet'
+          - 'copilot-claude-sonnet-4'
+          - 'copilot-claude-sonnet-4.5'
+          - 'copilot-claude-haiku-4.5'
+          - 'copilot-gemini-2.5-pro'
+          - 'copilot-gpt-5-auto'
 
 jobs:
   TestCase:
@@ -38,6 +61,7 @@ jobs:
       run: npx mocha -- --grep "${{ github.event.inputs.test_pattern }}"
       env:
         MAX_ATTEMPTS: ${{ github.event.inputs.max_attempts }}
+        OPENAI_MODEL: ${{ github.event.inputs.openai_model }}
 
     - name: Display test results
       if: always()
