feat: enhance artifact naming with retry attempt information
Add max retry attempts and pipeline retry attempt number to artifact names for better test run traceability. The script now accepts two additional parameters (maxAttempts and runAttempt) and appends them to the artifact name when present, helping distinguish between different retry attempts in the CI pipeline.

Changes:
- Accept maxAttempts and runAttempt as command-line arguments
- Append MaxRetry suffix when max attempts is specified
- Append PipelineRetry suffix when run attempt is greater than 1
- Update workflow to pass retry-related GitHub context variables

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -89,7 +89,7 @@ jobs:
     - name: Prepare artifact name
       if: always()
       id: artifact_name
-      run: npx tsx .github/scripts/prepare-artifact-name.ts "${{ github.event.inputs.test_pattern }}" "${{ github.run_number }}"
+      run: npx tsx .github/scripts/prepare-artifact-name.ts "${{ github.event.inputs.test_pattern }}" "${{ github.run_number }}" "${{ github.event.inputs.max_attempts }}" "${{ github.run_attempt }}"
 
     - name: Debug - List files before upload
       if: always()
