--- a/package.json
+++ b/package.json
@@ -11,27 +11,23 @@
         "dist"
     ],
     "scripts": {
-        "dev": "tsx src/index.ts",
+        "dev": "bun src/index.ts",
         "build": "tsc -p tsconfig.build.json",
-        "rebuild": "npm run clean && tsc -p tsconfig.build.json",
-        "start": "node dist/index.js",
-        "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
+        "rebuild": "bun run clean && tsc -p tsconfig.build.json",
+        "start": "bun dist/index.js",
+        "clean": "bun -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
         "build:watch": "tsc -p tsconfig.build.json --watch",
-        "test": "npx mocha"
+        "test": "bun test --timeout=60000"
     },
     "author": "Arijit Kundu",
     "license": "ISC",
     "devDependencies": {
         "@types/better-sqlite3": "7.6.13",
-        "@types/chai": "5.2.2",
         "@types/handlebars": "4.0.40",
-        "@types/mocha": "10.0.10",
         "@types/node": "^24.2.1",
-        "chai": "5.2.1",
-        "mocha": "11.7.1",
+        "bun-types": "1.3.1",
         "nyc": "17.1.0",
         "source-map-support": "0.5.21",
-        "tsx": "4.20.5",
         "typescript": "^5.9.2"
     },
     "dependencies": {
