--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "moduleResolution": "bundler",
+    "target": "ES2022",
+    "module": "ESNext",
+    "downlevelIteration": true,
     "outDir": "./dist",
     "noEmit": false,
     "declaration": true,
