--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -51,7 +51,7 @@ jobs:
         bun-version: latest
 
     - name: Install dependencies
-      run: bun install
+      run: bun install --verbose
 
     - name: Build project
       run: bun run build
