--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -45,6 +45,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+
     - name: Setup Bun
       uses: oven-sh/setup-bun@v2
       with:
