--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -42,26 +42,26 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout code
+    - name: 🔄 Checkout code
       uses: actions/checkout@v4
 
-    - name: Use Node.js 20.x
+    - name: 🟢 Use Node.js 20.x
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
 
-    - name: Setup Bun
+    - name: 🐰 Setup Bun
       uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
 
-    - name: Install dependencies
+    - name: 📦 Install dependencies
       run: bun install --verbose
 
-    - name: Build project
+    - name: 🔨 Build project
       run: bun run build
 
-    - name: Run test
+    - name: 🧪 Run test
       if: success()
       continue-on-error: true
       id: test_run
@@ -71,7 +71,7 @@ jobs:
         MAX_ATTEMPTS: ${{ github.event.inputs.max_attempts }}
         OPENAI_MODEL: ${{ github.event.inputs.openai_model }}
     
-    - name: Check test outcome
+    - name: ✅ Check test outcome
       if: always()
       run: |
         bun -e "
@@ -87,20 +87,20 @@ jobs:
         }
         " '${{ steps.test_run.outcome }}'
 
-    - name: Display test results
+    - name: 📊 Display test results
       if: always()
       run: echo "Test execution completed with pattern - ${{ github.event.inputs.test_pattern }}"
 
-    - name: Prepare artifact name
+    - name: 📝 Prepare artifact name
       if: always()
       id: artifact_name
       run: bun .github/scripts/prepare-artifact-name.ts "${{ github.event.inputs.test_pattern }}" "${{ github.run_number }}" "${{ github.event.inputs.max_attempts }}" "${{ github.run_attempt }}"
 
-    - name: Debug - List files before upload
+    - name: 🐛 Debug - List files before upload
       if: always()
       run: bun .github/scripts/debug-files.ts
 
-    - name: Upload logs as artifacts
+    - name: 📤 Upload logs as artifacts
       if: always()
       uses: actions/upload-artifact@v4
       with:
