বৈশিষ্ট : পরিবেশের চল ব্যাবহার করছি openai সার্ভিস এর জন্য

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # OpenAI Configuration
 OPENAI_API_KEY=ollama-dummy-key
-OPENAI_MODEL=copilot-gpt-4
+# OPENAI_MODEL=copilot-gpt-4
+OPENAI_MODEL=granite3-moe:3b
 OPENAI_TEMPERATURE=0.8
 OPENAI_MAX_TOKENS=1000
 OPENAI_TIMEOUT=30000
-OPENAI_BASE_URL=http://localhost:3000/v1/  # Optional: Custom API endpoint
+# OPENAI_BASE_URL=http://localhost:3000/v1/  # Optional: Custom API endpoint
+OPENAI_BASE_URL=http://172.30.245.214:11434/v1/  # Optional: Custom API endpoint
